       well as it writes out one vcf file per contact instead of just
       one big file containing all contacts. Thanks to Paul Oremland.

       NEW: Preliminary (no meta data) support of h.264 video format
       via the libmp4v2 interface. Thanks to Peter Lieverdink.

       NEW: Script to sync notes from Tomboy to the iPod. Thanks to
       Tejas Dinkar.

       BUGFIX: Pressing 'OK' when syncing directories several times
       could crash gtkpod. Thanks to dforsi.

       BUGFIX: Exporting tracks did not work if the template
       extensions (.mp3...) did not match case-sensitively, possibly
       leading to non-exported tracks. Thanks to Mattias Wadman.

       BUGFIX: When updating tracks, the filename of the music file
       and the filename of the thumbnail could be messed up. Fixed.

       BUGFIX: The Edit Detail dialog did not handle the 'Year' field
       correctly.

       NEW: Spanish translation. Thanks to Alejandro Lamas.

gtkpod V0.99.5CVS

       NEW FEATURE: Preliminary support for mobile phones supporting
       iTunes (see Changelog_detailed for details)

       IMPROVEMENT: Handle multiple calendar and task files in
       sync-evocalendar script. Thanks to Michele C. Soccio

       IMPROVEMENT: Lyrics are displayed on the iPod when available.

       BUGFIX: When updating tracks, files were not copied to the iPod
       even if the file was changed.

       BUGFIX: Removing playlists could crash gtkpod.

       WORKAROUND: Disable sorting of playlist view as this crashed
       gtkpod.

gtkpod V0.99.4

       BUGFIX: Options for exporting playlist files could not be
       changed.

       BUGFIX: Fixed segfault when updating tracks or directories with
       artowrk present.

       BUGFIX: Browse button for "Sync Notes Script" opened a
       directory browser instead of a file browser.

       BUGFIX: Writing ID3v2.4 tags in UTF8 did not always
       work. Thanks to 't0c' for the patch.
