@@ -26,6 +26,9 @@ gtkpod V0.99.6CVS
        NEW: Script to sync notes from Tomboy to the iPod. Thanks to
        Tejas Dinkar.
 
+       NEW: Support of iTunes iTunNORM tag for volume normalisation of
+       mp4 tracks.
+
        BUGFIX: Pressing 'OK' when syncing directories several times
        could crash gtkpod. Thanks to dforsi.
 
